add to home top card

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,87 @@
 </head>
 
 <body>
+    <!-- top card section -->
+
+    <div class="container-fluid my-4">
+        <div class="container ">
+            <div class="row">
+                <!-- 1st card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2nd card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 3rd card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4th card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 5th card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 6th card -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="card shadow mb-2">
+                        <img src="./picture/image 7.png" class="card-img-top mx-auto mt-1"
+                            style="width: 96px; height:104px" alt="...">
+                        <div class="border my-2"></div>
+                        <div class="mx-auto">
+                            <small class="mx-auto">Academic policies</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
     <!-- admission section -->
     <div class="admition-container">
         <div class="d-flex justify-content-center admission-container-link">
